--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,8 @@ http {
     gzip  on;
     # 后端服务器组
     upstream backends{
+        # ip_hash指令 根据ip hash计算进行负载均衡
+        ip_hash;
         server 127.0.0.1:9000 fail_timeout=5s;
         server 127.0.0.1:9001 fail_timeout=5s;
         server 127.0.0.1:9002 fail_timeout=5s;
