--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,10 @@ events {
     worker_connections  1024;
 }
 http {
+     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                                   '$status $body_bytes_sent "$http_referer" '
+                                   '"$http_user_agent" "$http_x_forwarded_for"'
+                                   '$upstream_addr - $upstream_status';
 	# 隐藏nginx版本号
 	server_tokens off;
     include       mime.types;
@@ -28,6 +32,8 @@ http {
     server {
         listen       80;
         server_name  localhost;
+        error_log logs/localhost/error.log warn;
+        access_log logs/localhost/access.log main;
         charset utf-8;
         location / {
             proxy_set_header   Host             $host;
@@ -39,6 +45,9 @@ http {
         error_page   500 502 503 504  /50x.html;
         location = /50x.html {
             root   html;
+        }
+        location /ngs {
+            stub_status on;
         }
     }
 }
